--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,21 @@ body {
     padding: 0;
     margin:0
 }
-#menu-column {
+#fr {
+    width: 100%;
+    height: 100vh;
+    display:none;
+    padding: 0;
+    margin:0
+}
+#en {
+    width: 100%;
+    height: 100vh;
+    display:none;
+    padding: 0;
+    margin:0
+}
+.menu-column {
     background-color: #629bea;
     height: 100vh;
     display: flex;
@@ -22,7 +36,31 @@ body {
     justify-content: center;
     align-items: center;
 }
-#summary-column {
+#lang-block {
+    width:90%;
+    margin: 20px;
+    height: 4rem;
+    font-size: 1.7em;
+    color: rgb(35, 35, 35); 
+    display:flex;
+    justify-content: auto;
+    align-items: center;
+    position:fixed;
+    position: absolute; 
+    bottom: 0px;
+    left: 0px;
+    z-Index:0
+}
+.lang-button {
+    width:37px;
+    height:35px;
+    display:inline;
+    text-align: center;
+    
+    
+
+}
+.summary-column {
     display: flex;
     flex-direction: column;
     background-color: #d9d9d9;
@@ -61,10 +99,10 @@ h1, h2 {
     padding-left: 10%;
 }
 @media (min-width:601px) { 
-    #menu-column {    
+    .menu-column {    
         width: 20%;   
     }
-    #summary-column {
+    .summary-column {
         width: 80%;   
     }
     h1 {
@@ -89,14 +127,14 @@ h1, h2 {
 }
 
 @media (max-width:600px) {
-    #menu-column {
+    .menu-column {
         position: fixed;
         top:0;
         left:0;
         z-index:3;
         width: 100%;
     }
-    #summary-column {
+    .summary-column {
         position: fixed;
         top:0;
         left:0;
